<resources>
    <string name="app_name">Biblioteca</string>
    <string name="action_settings">Settings</string>
    <string name="hint_book">Book</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar_datos">Ingresar datos</string>
    <string name="titulo">Título:</string>
    <string name="autores">Autores (Use comas):</string>
    <string name="edicion">Edition</string>
    <string name="editoriales">Editorial:</string>
    <string name="resumen">Decripción</string>
    <string name="isbn">ISBN:</string>
    <string name="agregar">Guardar</string>
    <string name="tag">Etiquetas (Use comas):</string>
    <string name="action_add">Agregar</string>
    <string name="authors_string">Autores</string>
    <string name="tags_string">Etiquetas</string>
</resources>
