<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.biblioteca.NewBookActivity"
        android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_datos"
                android:textSize="@dimen/title_size"
                android:textColor="#000"
                android:layout_margin="@dimen/margin_tv"/>

        <EditText
                android:id="@+id/et_tittle"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_author"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/autores"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_editorial"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/editoriales"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_summary"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/resumen"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_isbn"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/isbn"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_tag"
                android:layout_width= "@dimen/et_width"
                android:layout_height="wrap_content"
                android:hint="@string/tag"
                android:layout_margin="@dimen/margin_tv"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IDs de autores y etiquetas:"
                android:layout_margin="5dp"
                android:textColor="#000"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/authors_string"
                        android:layout_margin="5dp"
                        android:padding="16dp"
                        android:layout_weight="2"/>

                <TextView
                        android:id="@+id/sv_authors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="16dp"
                        android:layout_weight="4"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tags_string"
                        android:layout_margin="5dp"
                        android:padding="16dp"
                        android:layout_weight="2"/>

                <TextView
                        android:id="@+id/sv_tags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="16dp"
                        android:layout_weight="4"/>
            </LinearLayout>

        <Button
                android:id="@+id/bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:textAllCaps="true"
                android:inputType="text"/>

    </LinearLayout>

</ScrollView>